<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".upload_donate_images"
    android:orientation="vertical">

    <include
        android:id="@+id/donate_include"
        layout="@layout/toolbar_layout"/>
    <ImageButton
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@android:drawable/ic_input_add"
        android:onClick="btnimage"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/discription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_discription"
        android:inputType="textMultiLine"
        />
    <Button
        android:id="@+id/insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_the_image"
        />
</LinearLayout>